paas/gitops/litmus-chaos/litmusportal-auth-server.yaml
### litmusportal-auth-server  Manifests
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litmusportal-auth-server
  namespace: litmus
  labels:
    component: litmusportal-auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: litmusportal-auth-server
  template:
    metadata:
      labels:
        component: litmusportal-auth-server
    spec:
      automountServiceAccountToken: false
      containers:
        - name: auth-server
          image: jfrog.uk.ngridtools.com/public-proxy-dockerhub/litmuschaos/litmusportal-auth-server:3.0.0-beta3
          volumeMounts:
            - name: ng-root-ca
              readOnly: true
              mountPath: /etc/ssl/certs/
          resources:
            requests:
              memory: "250Mi"
              cpu: "225m"
              ephemeral-storage: "500Mi"
            limits:
              memory: "712Mi"
              cpu: "550m"
              ephemeral-storage: "1Gi"
          ports:
            - containerPort: 3000
            - containerPort: 3030
          imagePullPolicy: Always
      volumes:
        - name: ng-root-ca
          configMap:
            name: config-trusted-cabundle
            items:
              - key: ca-bundle.crt
                path: ca-certificates.crt
            defaultMode: 420
---
apiVersion: v1
kind: Service
metadata:
  name: litmusportal-auth-server-service
  namespace: litmus
spec:
  type: ClusterIP
  ports:
    - name: auth-server
      port: 9003
      targetPort: 3000
    - name: auth-rpc-server
      port: 3030
      targetPort: 3030
  selector:
    component: litmusportal-auth-server
