paas/gitops/litmus-chaos/dex-service.yaml
# ConfigMap for DexServer
---
# Deployment for DexServer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litmusportal-dex-server
  namespace: litmus
  labels:
    component: litmusportal-dex-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: litmusportal-dex-server
  template:
    metadata:
      labels:
        component: litmusportal-dex-server
    spec:
      serviceAccountName: litmus-server-account
      containers:
        - name: litmus-dex
          imagePullPolicy: IfNotPresent
          image: jfrog.uk.ngridtools.com/public-proxy-dockerhub/litmuschaos/litmusportal-dex-server:ci
          command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
          ports:
            - containerPort: 5556
          volumeMounts:
            - name: config
              mountPath: /etc/dex/cfg
            - name: openshift-ca
              readOnly: true
              mountPath: /etc/ssl/
      volumes:
        - name: config
          configMap:
            name: dex-server-admin-config
            items:
              - key: config.yaml
                path: config.yaml
        - name: openshift-ca
          configMap:
            name: kube-root-ca.crt
            items:
              - key: ca.crt
                path: openshift.pem
            defaultMode: 420
---
# Exposed service for DexServer
apiVersion: v1
kind: Service
metadata:
  name: litmusportal-dex-service
  namespace: litmus
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5556
  selector:
    component: litmusportal-dex-server
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dex-oauth
  namespace: litmus
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: litmusportal-dex-service
    weight: 100
  wildcardPolicy: None
